--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "export": "next export"
   },
   "dependencies": {
+    "netlify-cli": "^8.6.18",
     "next": "^12.0.7",
     "react": "^17.0.2",
     "react-dom": "^17.0.2"
